--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Babalola Gbogo",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^4.3.0"
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "mongodb": "^4.3.0",
+    "mongoose": "^6.1.7"
   }
 }
