--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.7"
+  },
+  "devDependencies": {
+    "expect": "^27.4.6",
+    "mocha": "^9.1.4",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.1"
   }
 }
