fix: refactor hard coded connection string to Heroku config var

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "17.0.1"
   },
   "author": "Babalola Gbogo",
   "license": "ISC",
